--- a/management/templates/management/marketplace_edit.html
+++ b/management/templates/management/marketplace_edit.html
@@ -7,22 +7,9 @@
     <h1>Marketplace</h1>
   </div>
   <div class="row">
-    <form method="post" action="{% url 'management:manage_marketplace' marketplace.id %}">
+    <form method="post" action="{% url 'management:edit_marketplace' marketplace.id %}">
       {% csrf_token %}
-      {% for field in form %}
-      <div class="form-group">
-        <label class="form-control-label">{{ field.label }}</label>
-        {% if field.errors %}
-        {{ field|add_placeholder|set_class:'form-control is-invalid' }}
-        <div class="invalid-feedback">{{ field.errors }}</div>
-        {% else %}
-        {{ field|add_placeholder|set_class:'form-control' }}
-        {% endif %}
-        {% if field.help_text %}
-        <small class="form-text text-muted">{{ field.help_text }}</small>
-        {% endif %}
-      </div>
-      {% endfor %}
+      {% include 'basic_form.html' %}
       <button type="submit"class="btn btn-primary" value="Update marketplace">Update marketplace</button>
       <input type="reset" class="btn btn-secondary" value="Reset">
       <a class="btn btn-secondary" href="{% url 'management:list_marketplace' %}">
