Finish basic transaction CRUD; Add message alert components in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
           <li><a class="nav-link" href="{% url 'admin:index' %}"><i class="fas fa-tools"></i> Admin</a></li>
           {% endif %}
           {% if user.is_authenticated %}
-          <li><a class="nav-link" href="{% url 'transaction:index' %}"><i class="far fa-clipboard"></i> Transaction</a></li>
+          <li><a class="nav-link" href="{% url 'transaction:list_transaction' %}"><i class="far fa-clipboard"></i> Transaction</a></li>
           {% endif %}
         </ul>
         <ul class="navbar-nav">
@@ -54,16 +54,29 @@
       </div>
     </nav>
     <main class="container mt-5 pt-3">
+    {% if messages %}
+      {% for message in messages %}
+        {% if message.tags == 'error' %}
+        <div class="alert alert-danger alert-dismissable mt-4">
+          <a class="panel-close close" data-dismiss="alert">×</a> {{ message }}
+        </div>
+        {% elif message.tags == 'info' %}
+        <div class="alert alert-info alert-dismissable mt-4">
+          <a class="panel-close close" data-dismiss="alert">×</a> {{ message }}
+        </div>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
     {% block content %}
     {% endblock %}
     </main>
 <!--    CDN-->
-<!--    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
+<!--    <script src="https://code.jquery.com/jquery-3.4.1..min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
 <!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>-->
 <!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
 
 <!--    LOCAL-->
-    <script src="{% static 'js/jquery-3.4.1.slim.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% block scripts %}
