--- a/transaction/templates/transaction/transaction_create.html
+++ b/transaction/templates/transaction/transaction_create.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+{% load base_extras %}
 {% load static %}
 {% block title %} Create Transaction {% endblock %}
 {% block links %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/transaction/jquery.datetimepicker.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/transaction/bootstrap-datepicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/transaction/jquery-ui.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/transaction/autocomplete.css' %}">
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -12,7 +14,7 @@
   </div>
   <form method="post" action="{% url 'transaction:create_transaction' %}">
     {% csrf_token %}
-    {% include 'basic_form.html' %}
+    {% include 'autocomplete_form.html' with form_group_col_class='col-6'%}
 
     <div id="purchases" class="mt-4">
       <h4>Purchases:</h4>
@@ -22,7 +24,7 @@
       {% for form in formset %}
       <div class="form-group purchase-formset">
         <b>{{ forloop.counter }}.</b>
-        {% include 'basic_form.html' %}
+        {% include 'autocomplete_form.html' with form_group_col_class='col-6' %}
       </div>
       {% endfor %}
     </div>
@@ -30,20 +32,24 @@
     <div class="form-group">
       <a id="add-purchase-button" href="#">Add more purchases</a>
     </div>
+    <div class="form-group">
+      <a id="remove-purchase-button" class="text-danger" href="#">Remove last purchase</a>
+    </div>
 
-    <button type="submit"class="btn btn-primary" value="Add Transaction">Add Transaction</button>
+    <button type="submit" class="btn btn-primary" value="Add Transaction">Add Transaction</button>
     <a class="btn btn-secondary" href="{% url 'transaction:list_transaction' %}">
       Back
     </a>
   </form>
 </div>
 
-{{ available_product|json_script:"available_product" }}
+{{ available_customer|json_script:"available_customer" }}
 {{ available_city|json_script:"available_city" }}
+{{ available_product|json_script:"available_product" }}
 {% endblock %}
 {% block scripts %}
-<script src="{% static 'js/transaction/jquery.datetimepicker.full.min.js' %}"></script>
+<script src="{% static 'js/transaction/jquery-ui.js' %}"></script>
+<script src="{% static 'js/transaction/bootstrap-datepicker.min.js' %}"></script>
 <script src="{% static 'js/transaction/datetimepicker.js' %}"></script>
 <script src="{% static 'js/transaction/transaction_purchase_form.js' %}"></script>
-<script src="{% static 'js/transaction/jquery-ui.js' %}"></script>
 {% endblock %}
