--- a/transaction/templates/transaction/transaction_edit.html
+++ b/transaction/templates/transaction/transaction_edit.html
@@ -3,8 +3,9 @@
 {% load static %}
 {% block title %} Edit Transaction {% endblock %}
 {% block links %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/transaction/jquery.datetimepicker.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/transaction/bootstrap-datepicker.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/transaction/jquery-ui.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/transaction/autocomplete.css' %}">
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -13,7 +14,7 @@
   </div>
   <form method="post" action="{% url 'transaction:edit_transaction' transaction.id %}">
     {% csrf_token %}
-    {% include 'basic_form.html' %}
+    {% include 'autocomplete_form.html' with form_group_col_class='col-6'%}
 
     <div id="purchases" class="mt-4">
       <h4>Purchases:</h4>
@@ -23,7 +24,7 @@
       {% for form in formset %}
       <div class="form-group purchase-formset">
         <b>{{ forloop.counter }}.</b>
-        {% include 'basic_form.html' %}
+        {% include 'autocomplete_form.html' with form_group_col_class='col-6' %}
       </div>
       {% endfor %}
     </div>
@@ -31,24 +32,28 @@
     <div class="form-group">
       <a id="add-purchase-button" href="#">Add more purchases</a>
     </div>
+    <div class="form-group">
+      <a id="remove-purchase-button" class="text-danger" href="#">Remove last purchase</a>
+    </div>
+
     <button type="submit"class="btn btn-primary" value="Update transaction">Update transaction</button>
     <input type="reset" class="btn btn-secondary" value="Reset">
     <a class="btn btn-secondary" href="{% url 'transaction:list_transaction' %}">
       Back
     </a>
     <br>
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteConfirmationModal">
       Delete transaction
     </button>
   </form>
 </div>
 
 <!-- Delete Confirmation Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Are you sure to delete this transaction?</h5>
+        <h5 class="modal-title" id="deleteConfirmationModalLabel">Are you sure to delete this transaction?</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -67,13 +72,14 @@
   </div>
 </div>
 
-{{ available_product|json_script:"available_product" }}
+{{ available_customer|json_script:"available_customer" }}
 {{ available_city|json_script:"available_city" }}
+{{ available_product|json_script:"available_product" }}
 {% endblock %}
 {% block scripts %}
-<!--<script src="{% static 'js/learning/jquery.js' %}"></script>-->
-<script src="{% static 'js/transaction/jquery.datetimepicker.full.min.js' %}"></script>
+<script src="{% static 'js/transaction/jquery-ui.js' %}"></script>
+<script src="{% static 'js/transaction/bootstrap-datepicker.min.js' %}"></script>
 <script src="{% static 'js/transaction/datetimepicker.js' %}"></script>
 <script src="{% static 'js/transaction/transaction_purchase_form.js' %}"></script>
-<script src="{% static 'js/transaction/jquery-ui.js' %}"></script>
+<!--<script src="{% static 'js/transaction/bootstrap-validator.min.js' %}"></script>-->
 {% endblock %}
