--- a/templates/base.html
+++ b/templates/base.html
@@ -57,11 +57,15 @@
     {% if messages %}
       {% for message in messages %}
         {% if message.tags == 'error' %}
-        <div class="alert alert-danger alert-dismissable mt-4">
+        <div class="alert alert-danger alert-dismissable mt-4" role="alert">
           <a class="panel-close close" data-dismiss="alert">×</a> {{ message }}
         </div>
         {% elif message.tags == 'info' %}
-        <div class="alert alert-info alert-dismissable mt-4">
+        <div class="alert alert-info alert-dismissable mt-4" role="alert">
+          <a class="panel-close close" data-dismiss="alert">×</a> {{ message }}
+        </div>
+        {% elif message.tags == 'success' %}
+        <div class="alert alert-success alert-dismissable mt-4" role="alert">
           <a class="panel-close close" data-dismiss="alert">×</a> {{ message }}
         </div>
         {% endif %}
