--- a/templates/basic_form.html
+++ b/templates/basic_form.html
@@ -30,6 +30,9 @@
         {{ field|add_placeholder|append_class:'form-check-input' }}
         <label class="form-check-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
       </div>
+      {% if field.help_text %}
+        <small class="form-text text-muted">{{ field.help_text }}</small>
+      {% endif %}
     </div>
     {% endif %}
   {% endfor %}
