--- a/transaction/templates/transaction/transaction_create.html
+++ b/transaction/templates/transaction/transaction_create.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/transaction/autocomplete.css' %}">
 {% endblock %}
 {% block content %}
-<div class="container">
+<div class="container pb-4">
   <div class="row">
     <h1>Add New Transaction</h1>
   </div>
